# tadashi

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  CITATION.bib  CMakeLists.txt  LICENSE  MANIFEST.in  README  README.md  README.org  _test_v4.py  apidocs.tgz  bdi.c  compile.sh  manual_gemm.py  manual_gemm_fast.py  manual_gemm_super.py  presentation-check.org  presentation.org  pyproject.toml  readme.md  readme.org  run_all_tests.sh  setup.py  try-executor.py  try.py
.github/workflows/: build-and-upload.yaml  tests.yaml
book-draft/: polyhedral-book.org
docker/: Makefile  barvinok.dockerfile  build.sh  compose.yaml  interactive_docker.sh  mk_dot_env.sh  polytut.archlinux.dockerfile  polytut.dockerfile  run_docker.sh  tadashi.dockerfile
docs/: .gitignore  Doxyfile  conf.py  index.rst  modules.rst  notes.org  parallel-for.org  presentation.org  requirements.txt  run_doxygen.sh  tadashi.rst
examples/: GEMM.c  Makefile  README.org  common.h  dataflow.c  demo.c  demo2.c  depnodep.c  depnodep.cc  depnodep_mark.yaml  end2end.py  evol_tadashi.py  fused.c  harness_demo.py  hello.c  input.txt  input0.yaml  input1.yaml  input_a.yaml  manual_gemm.py  manual_stencil.py  many.c  matmul.c  mv.cc  nodep.cc  rrl.py  simple_rl.py  threeloop.c  tile_gemm.py  tile_gemm_map.py  tile_gemm_mpi4py.py  tile_gemm_polly.py  tile_jacobi2d.py  twomod2.c
examples/ecp-apps/: download.sh  scop_detection.sh
examples/evaluation/: evol_genoa.sh  evol_tadashi.py  hpgmg.py  mcts_polybench.py  miniAMR_try.py  output_ALL_XL.txt  plot_improvements.py  plot_mcts_ridge.py  poc_ALL.py  poc_correlation.py  poc_heat3d.py  poc_jacobi2d.py  polybench.py  results.org  results_ScriptPolybench.txt  setup.sh  snap.patch  snap.py  snap_debug.c  snap_debug.py  snap_input_1  snap_try.py  survery.org  survey.org
examples/inputs/: common.h  depnodep.c  depnodep_mark.yaml  depnodep_orig_nolabel.yaml  depnodep_stripped.c  dotprod.c  fdepnodep.f90  fused-no.c  hello.c  loopcarry.cc  many.flat.c  mod2code.c  shifts.c  test.c  twomod2.c
examples/jscop/: _QMbiharmonic_wk_scalar_cpuPdivergence_sphere_wk___%.preheader19---%56.jscop  _QMbiharmonic_wk_scalar_gpu_compiler_inlinePdivergence_sphere_wk___%.preheader35---%56.jscop  _QMbiharmonic_wk_scalar_gpu_compiler_inlinePlaplace_sphere_wk___%.preheader32.i---%80.jscop  _QMbiharmonic_wk_scalar_gpu_push_loopPlaplace_sphere_wk_openacc___%.preheader129---%._crit_edge.jscop  main___%6---%89.jscop
include/: codegen.h  ctadashi.h  legality.h  scops.h  tadashi.h  transformations.h
jupyter/: do-loops-paper.ipynb  fourier-motzkin.ipynb
old/: _init_.py  ctadashi.h
old/include/: scops.h
old/src/: codegen.c  ctadashi.cc  ctadashi.i  scops.cc
old/tadashi/: __init__.py  apps.py
scripts/: Monte_Carlo_Tree_Search.py  beam_search.py  check_mem.sh  common.sh  eval-polybench.sh  fugaku.source  gen_wrappers.py  genoa.source  passesparser.py  process_yaml.py  py_tadashi.py  python_c_interact.py  scops_in_dir  tadashi.sh  tadashi_wrapper.py
scripts/genoa/: ray.sh  run.sh  source  sub_mcts.sh
scripts/install/: fugaku.sh  genoa.sh  isl.patch  llvm.sh  llvm20_src.sh  llvm_src.sh  mpi4py-on-fugaku.sh  opnempi-gnu.sh  swig.sh
scripts/pluto/: generate_pluto_c_files.sh  measure.sh
src/: annotated_pet_loopback.c  astgen.c  bad_deps.c  build_pet.sh  c_python_interact.c  codegen.c  ctadashi.c  ctadashi.cc  ctadashi.i  depanalysis.c  divs.c  functions.c  goodbadtest.c  hello.c  killer.c  legality.c  main.c  main.cc  pet_codegen_skimo.c  polegality.c  poly-scan.c  raiser.cc  readme.org  scale_and_shift.c  scop_detector.c  scops.cc  scratch.c  seq_legality.c  sink_and_order.c  summary.sh  tadashi.c  transformations.c  tree_manipulation.c  understanding_loopback_0.c
src/archive/: CMakeLists.txt  advanced_shift.c  astgen.c  depanalysis.c  fuse.c  get_dim_name.c  main.c  polegality.c  poly-scan.c  scale_and_shift.c  scratch.c  seq_legality.c  sink_and_order.c  tile_and_interchange.c  tree_manipulation.c
src/from-isl-development-ml/: GEMM.yaml  demo.yaml  demo2.yaml  demo3.yaml  demo_tile.yaml  depnode.yaml  graft_tree.yaml  hello1.yaml  isl_ast.c  isl_schedule.yaml  matmul.yaml  matmul_tile.yaml  mv.yaml  process_yaml.py  schedule_node.yaml
src/hellos/: hello1.c  hello2.c
tadashi/: .gitignore  README.org  __init__.py  __main__.py  _scripts.py  _tr_wrappers.py  apps.py  ccscop.cc  ccscop.h  ccscop.pxd  codegen.pxd  core.py  isl.pxd  mcts.py  node.py  node_type.py  passesparser.py  pet.pxd  random_rl.py  scop.cc  scop.h  scop.pxd  scop.py  scop_detector.py  simple.py  tadashi_interface.pyx  tadashi_scop.cc  tadashi_scop.h  tadashi_scop.pxd  tadashilib.py  transformations.h  transformations.pxd  translators.c  translators.py
tadashi/distributor/: __init__.py
tadashi/mcts/: __init__.py  __main__.py  base.py  logger.py  node_node.py  node_params.py  node_root.py  node_transformation.py  optimize.py
tadashi/src/: .gitignore  Makefile  ccscop.cc  ccscop.h  codegen.c  legality.c  prototype.cc  tmp.cc  transformations.c  transformations.h
tests/: bad_deps.c  dummy.c  legality_test.cc  syntax_error.c  test_apps.py  test_ccscop.py  test_ctadashi.py  test_full_fuse.c  test_full_shift_param.c  test_full_shift_val.c  test_full_shift_var.c  test_full_split.c  test_fuse.c  test_gemm.c  test_interchange_1.c  test_new_tadashi.py  test_node.py  test_partial_fuse.c  test_partial_shift_param.c  test_partial_shift_val.c  test_partial_shift_var.c  test_pluto_fig4.c  test_scop.py  test_set_parallel.c  test_split.c  test_split_gesummv_00.c  test_tadashi.py  test_tile1d_1.c  test_tile1d_2.c  test_tile2d.c  test_tile3d.c  test_translators.py  test_unroll.c  threeloop.c  tile_2.c  xtest_name_this.py
tests/cc/: legality_test.cc  test_legality.cc
tests/py/: fuse_partial.c  interchange_1.c  partial_shift_val.c  partial_shift_var.c  pluto_fig4.c  test_ctadashi.py  test_full_fuse.c  test_full_shift_param.c  test_full_shift_val.c  test_full_shift_var.c  test_fuse.c  test_interchange_1.c  test_partial_fuse.c  test_partial_shift_param.c  test_partial_shift_val.c  test_pluto_fig4.c  (+4 more)
times/: plot_results.py
(+367 files in other folders)
