[build-system]
requires = ["setuptools", "cmake_build_extension", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "Tadashi"  # as it would appear on PyPI
readme = "readme.md"
dynamic = ["dependencies", "version"]
authors = [
  {name = "Emil Vatai",      email = "emil.vatai@gmail.com"}
]
maintainers = [
  {name = "Emil Vatai",      email = "emil.vatai@gmail.com"},
]
### keywords = ["simulation", "spin-dynamics", "radical pairs"]
### license = {text = "MIT"}

[tools.setuptools]
packages = ["tadashi"]
# package-dir = {"tadashi" = "tadashi", "ctadashi"="src"}

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[project.urls]
### Homepage = "https://github.com/Spin-Chemistry-Labs/radicalpy"
### Documentation = "https://radicalpy.readthedocs.io/en/latest/"
Source = "https://github.com/vatai/tadashi"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
