[build-system]
requires = ["setuptools", "cmake_build_extension", "wheel", "setuptools-git-versioning", "cibuildwheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "tadashi"  # as it would appear on PyPI
readme = "README.md"
dynamic = ["dependencies", "version"]
authors = [
  {name = "Emil Vatai",      email = "emil.vatai@riken.jp"       },
  {name = "Aleksandr Drozd", email = "aleksandr.drozd@riken.jp"  },
  {name = "Ivan R. Ivanov",  email = "ivanov.i.e641@m.isct.ac.jp"},
  {name = "João E. Batista", email = "joao.batista@riken.jp"     },
  {name = "Yinghao Ren",     email = "yinghaoren.cs@gmail.com"   },
  {name = "Mohamed Wahib",   email = "mohamed.attia@riken.jp"    },
]
maintainers = [
  {name = "Emil Vatai",      email = "emil.vatai@gmail.com"}
]

[project.urls]
Homepage = "https://vatai.github.io/projects/tadashi/"
Documentation = "https://tadashi.readthedocs.io/en/latest/"
Source = "https://github.com/vatai/tadashi/"

[tool.setuptools]
packages = ["tadashi"]

[tool.setuptools_scm]
version_file = "tadashi/_version.py"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"tadashi" = ["*.pxd", "include/*"]

[tool.cibuildwheel]
build-frontend="build[uv]"
before-all = ["third_party/install.sh"]
build = "*manylinux*" # todo comment this out after size increase
# manylinux-x86_64-image = "manylinux-mod"